#12288: fixed color contrast issues

--- a/profile/themes/os_admin/scss/components/_ui-dialog.scss
+++ b/profile/themes/os_admin/scss/components/_ui-dialog.scss
@@ -10,3 +10,6 @@
     color: $color-white;
   }
 }
+.cke_mathjax_doc {
+  color: $color-blue !important;
+}
